--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,13 +15,13 @@ jobs:
 
       - uses: actions/setup-java@v3
         with:
-          distribution: 'zulu'
+          distribution: 'corretto'
           java-version: '17'
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build with Gradlew
+      - name: Build with Gradle
         run: ./gradlew clean build
 
       # 현재 시간 가져오기
@@ -34,7 +34,7 @@ jobs:
 
       # 배포용 패키지 경로 지정
       - name: Set artifact
-        run: echo "artifact=$(ls./build/libs)" >>$GITHUB_ENV
+        run: echo "artifact=$(ls ./build/libs)" >>$GITHUB_ENV
 
       # 빈스토크 배포
       - name: Beanstalk Deploy
@@ -43,7 +43,7 @@ jobs:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: springboot-developer
-          environment_name: springboot-developer-env-1
+          environment_name: Springboot-developer-env-1
           version_label: github-action-${{steps.current-time.outputs.formattedTime}}
           region: ap-northeast-2
           deployment_package: ./build/libs/${{env.artifact}}
